hide posts again (whoops)

--- a/config.toml
+++ b/config.toml
@@ -171,7 +171,7 @@ theme = "LoveIt"
       disclaimer = ""
     # Home page posts
     [params.home.posts]
-      enable = true
+      enable = false
       # special amount of posts in each home posts page
       paginate = 6
       #  replaced with hiddenFromHomePage in params.page
